fix(docs): Adjusted content width to 100% for better appearance on mobile devices

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -2,6 +2,6 @@
 
 .bd-content {
   flex-grow: 1;
-  min-width: 120%;
+  min-width: 100%;
   max-width: 150%;
 }
